// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TextInput > renders contrast 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-component="TextInput"
    data-contrast="true"
    data-no-leading-visual="true"
    data-no-trailing-action="true"
    data-no-trailing-visual="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
      value=""
    />
  </span>
</div>
`;

exports[`TextInput > renders error 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-component="TextInput"
    data-no-leading-visual="true"
    data-no-trailing-action="true"
    data-no-trailing-visual="true"
    data-validation="error"
  >
    <input
      aria-invalid="true"
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
      value=""
    />
  </span>
</div>
`;

exports[`TextInput > renders monospace 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-component="TextInput"
    data-monospace="true"
    data-no-leading-visual="true"
    data-no-trailing-action="true"
    data-no-trailing-visual="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      type="text"
      value=""
    />
  </span>
</div>
`;

exports[`TextInput > renders placeholder 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-component="TextInput"
    data-no-leading-visual="true"
    data-no-trailing-action="true"
    data-no-trailing-visual="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="zipcode"
      placeholder="560076"
      type="text"
      value=""
    />
  </span>
</div>
`;

exports[`TextInput > should render a password input 1`] = `
<div>
  <span
    aria-busy="false"
    class="TextInput-wrapper prc-components-TextInputWrapper--nxNz prc-components-TextInputBaseWrapper-fStx7"
    data-component="TextInput"
    data-no-leading-visual="true"
    data-no-trailing-action="true"
    data-no-trailing-visual="true"
  >
    <input
      class="prc-components-Input-sKHcw"
      data-component="input"
      name="password"
      type="password"
      value=""
    />
  </span>
</div>
`;
